fixed search field not showing, added HTTPCLIENTMODULE/ need to get fetch working now

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -29,6 +29,7 @@ button {
     color: #f2e12b;
     background-color: transparent;
     border: none;
+    text-decoration: none;
     text-shadow: 0.01em 0.01em 0.15em rgb(0, 0, 0);
     font-size: 1.4em;
     text-align: center;
