--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -9,17 +9,53 @@ h3 {
     left: 28%;
     height: 15vh;
     padding: 1.5em;
-    background-color: hsla(246, 17%, 88%, 0.8);
+    background-color: hsla(246, 17%, 88%, 0.9);
+    border-radius: .5em;
+    display: inline-block;
+    text-shadow: 0.01em 0.01em 0.11em rgb(0, 0, 0);
+
 }
 
 .input {
-    position: absolute;
-    left: 20vw;
-    margin-top: 5vh;
+    position: relative;
+    left: 8vw;
+    margin-top: 4.5vh;
+    font-family: 'Press Start 2p', cursive;
+    background-color: transparent;
+    color: #f2e12b;
+    text-shadow: 0.01em 0.01em 0.11em rgb(0, 0, 0);
+
+}
+
+.options {
+    position: relative;
+    color: #f2e12b;
+    font-family: 'Press Start 2P', cursive;
+    text-shadow: 0.01em 0.01em 0.11em rgb(0, 0, 0);
+    background-color: transparent;
+    border: none;
 }
 
 .submit {
-    left: 23vw;
-    position: absolute;
-    top: 7vw;
+    left: 15vw;
+    position: relative;
+    color: #f2e12b;
+    font-family: 'Press Start 2P', cursive;
+    text-shadow: 0.01em 0.01em 0.11em rgb(0, 0, 0);
+    background-color: transparent;
+    border: none;
+}
+
+.close {
+    font-family: 'Press Start 2p', cursive;
+    color: #f2e12b;
+    background-color: transparent;
+    border: none;
+    text-decoration-line: none;
+    /* text-shadow: 0.01em 0.01em 0.15em rgb(0, 0, 0); */
+    /* font-size: 1.4em; */
+    text-align: center;
+    position: relative;
+    top: 2.5em;
+    left: -9.5em;
 }
